package cat.udl.eps.entsoftarch.domain;

import com.fasterxml.jackson.annotation.JsonIdentityReference;
import lombok.Data;
import org.hibernate.annotations.Fetch;
import org.hibernate.annotations.FetchMode;
import org.springframework.security.core.GrantedAuthority;
import org.springframework.security.core.authority.AuthorityUtils;

import javax.persistence.Entity;
import javax.persistence.FetchType;
import javax.persistence.ManyToMany;
import javax.persistence.OneToMany;
import java.util.ArrayList;
import java.util.Collection;
import java.util.List;

/**
 * Created by http://rhizomik.net/~roberto/
 */
@Entity
@Data
public class DataOwner extends User {

    @OneToMany(mappedBy = "owner", fetch = FetchType.EAGER)
    @JsonIdentityReference(alwaysAsId = true)
    private List<Dataset> ownsDatasets = new ArrayList<>();

    @OneToMany(mappedBy = "owner", fetch = FetchType.EAGER)
    @Fetch(value = FetchMode.SUBSELECT)
    @JsonIdentityReference(alwaysAsId = true)
    private List<Schema> ownsSchemas = new ArrayList<>();

    @OneToMany(mappedBy = "owner", fetch = FetchType.EAGER)
    @Fetch(value = FetchMode.SUBSELECT)
    @JsonIdentityReference(alwaysAsId = true)
    private List<License> ownsLicenses= new ArrayList<>();

    @ManyToMany(mappedBy = "sharedWith", fetch = FetchType.EAGER)
    @Fetch(value = FetchMode.SUBSELECT)
    @JsonIdentityReference(alwaysAsId = true)
    private List<Dataset> sharedDatasets;

    @Override
    public Collection<? extends GrantedAuthority> getAuthorities() {
        return AuthorityUtils.commaSeparatedStringToAuthorityList("ROLE_OWNER");
    }

    @Override
    public String toString() {
        return "DataOwner{" +
                "ownsDatasets=" + ownsDatasets +
                ", ownsSchemas=" + ownsSchemas +
                ", ownsLicenses=" + ownsLicenses +
                ", sharedDatasets=" + sharedDatasets +
                '}';
    }
}
